fix role icon alignment

--- a/app/styles/components/resource-list-grid.scss
+++ b/app/styles/components/resource-list-grid.scss
@@ -5,12 +5,11 @@
 
       .panel-icon {
         float: left;
-        margin-bottom: -2px;
-        margin-right: 4px;
+        margin-right: 6px;
         color: $color-bright-blue;
 
         i.fa {
-          vertical-align: 0;
+          vertical-align: -4px;
         }
       }
 
